tests/ui/wf/wf-trait-associated-type-region.stderr
error[E0309]: the associated type `<Self as SomeTrait<'a>>::Type1` may not live long enough
  --> $DIR/wf-trait-associated-type-region.rs:9:18
   |
LL |     type Type2 = &'a Self::Type1;
   |                  ^^^^^^^^^^^^^^^ ...so that the reference type `&'a <Self as SomeTrait<'a>>::Type1` does not outlive the data it points at
   |
help: consider adding an explicit lifetime bound...
   |
LL |     type Type2 = &'a Self::Type1 where <Self as SomeTrait<'a>>::Type1: 'a;
   |                                  ++++++++++++++++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
